# d3qn-davranis-agaci-sosyal-navigasyon

./: .gitignore  LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: d3qn_parametreler.yaml  robot_parametreler.yaml
config/davranis_agaci_xml/: BT_Cekingen.xml  BT_Merakli.xml  BT_Nötr.xml  BT_Robot.xml
config/senaryo_ayarlari/: avm_12_ajan.yaml  hastane_8_ajan.yaml  okul_10_ajan.yaml
docs/: kurulum.md
launch/: avm_egitim.launch.py  hastane_egitim.launch.py  okul_egitim.launch.py  yolov5_insan_tespit.launch.py
scripts/: kurulum.sh  paket_derle.sh
src/: egit.py  test.py  yardimcilar.py
src/ajanlar/: d3qn_ajan.py  davranis_agaci.py
src/ortamlar/: ros2_gazebo_ortam.py  temel_ortam.py
src/ros2_entegrasyon/: ana_node.py  hiz_yayinlayici.py  lazer_isleyici.py  odometri_isleyici.py  pedsim_isleyici.py  sosyal_kuvvet.py  tf2_isleyici.py  yolov5_insan_tespit_node.py
worlds/: avm.world  hastane.world  okul.world
