<?xml version="1.0"?>
<package format="3">
  <name>d3qn_sosyal_navigasyon</name>
  <version>1.0</version>
  <description>D3QN tabanlı sosyal robot navigasyonu (ROS2 + Gazebo) - Eğitim ve Test Altyapısı.</description>
  <maintainer email="korayozdemir34@gmail.com">Koray Özdemir</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>pedsim_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
